--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  position: relative;
+  background-color: #242B2E;
+}
+h1 {
   text-align: center;
+  margin-top: 20px;
+  color: aliceblue;
+}
+form {
+  position: fixed;
+  top: 50px;
+  right: 30%;
+  left: 30%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.items {
+  position: fixed;
+  top: 70px;
+  right: 30%;
+  left: 30%;
+  border-radius: 8px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.fa-icon{
+  margin-left: 8px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.form-group {
+  margin-bottom: 0;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.completedTodo {
+  text-decoration: line-through;
 }
